[package]
name = "jottem"
version = "0.1.6"
edition = "2021"
authors = ["dogue"]
license = "MIT"
description = "A lightweight CLI manager for your markdown notes."
homepage = "https://github.com/dogue/jottem"
documentation = "https://github.com/dogue/jottem#readme"
repository = "https://github.com/dogue/jottem"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["notes", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
comfy-table = "7.0.1"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
dirs = "5.0.1"
rocksdb = { version = "0.21.0", default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"

[dev-dependencies]
serial_test = "2.0.0"
tempfile = "3.8.0"
